Adds GeomEppy reference

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -22,6 +22,14 @@
     year = {2004}
 }
 
+@misc{Bull2016,
+author = {Bull, Jamie},
+title = {{GeomEppy}},
+url = {https://github.com/jamiebull1/geomeppy},
+year = {2016}
+}
+
+
 @article{Reinhart2016,
     abstract = {Over the past decades, detailed individual building energy models (BEM) on the one side and regional and country-level building stock models on the other side have become established modes of analysis for building designers and energy policy makers, respectively. More recently, these two toolsets have begun to merge into hybrid methods that are meant to analyze the energy performance of neighborhoods, i.e. several dozens to thousands of buildings. This paper reviews emerging simulation methods and implementation workflows for such bottom-up urban building energy models (UBEM). Simulation input organization, thermal model generation and execution, as well as result validation, are discussed successively and an outlook for future developments is presented.},
     author = {Reinhart, Christoph F. and { Cerezo Davila } , Carlos},
