Fixes an issue with the rendering of USDOE refs.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -64,7 +64,7 @@
     year = {1995}
 }
 
-@misc{USDOE-BuildingEnergyCodesProgram2012,
+@misc{USDOE2012,
     abstract = {These prototypes are then modified to accommodate four different heating system types and four foundation types typically found in new residential construction.},
     author = {{ US DOE - Building Energy Codes Program }},
     booktitle = {US Department of Energy},
@@ -73,7 +73,7 @@
     year = {2012}
 }
 
-@misc{USDOE-BuildingTechnologyOffice2018,
+@misc{USDOE2018,
     address = {Washington},
     author = {{ US DOE - Building Technology Office }},
     booktitle = {US Department of Energy},
